Fix spacing in Summary pop-up

--- a/step-web/src/main/webapp/scss/modals.scss
+++ b/step-web/src/main/webapp/scss/modals.scss
@@ -340,5 +340,15 @@
   text-decoration:underline;
 }
 
+#biblesummary {
+  div {
+    p {
+      margin-bottom:0;
+      margin-top:5px;
+      font-weight:bold;
+    }
+  }
+}
+
 @import 'bible_versions';
 @import 'advanced_search';
